[package]
name = "polyline-codec"
version = "0.1.1"
edition = "2021"
authors = ["Chance Dinkins", "Justin Poehnelt"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/chanced/rs-polyline-codec"
keywords = ["polyline", "maps"]
description = "Encode and decode polylines."
[dependencies]

[dev-dependencies]
proptest = "1.0.0"
